--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
           </button>
         </form>
         <a href="#" class="user">
-          <img src="img/user-avatar.jpg" alt="Avatar: Nathan" class="user-avatar">
-          <span class="user_name">Nathan</span>
+          <img src="img/user-avatar.jpg" alt="Avatar: Nathan" class="user__avatar">
+          <span class="user__name">Nathan</span>
         </a>
         <!-- /.user -->
       </div>
