--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Nunito:wght@400;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Nunito:wght@400;600;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/swiper-bundle.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -103,27 +103,59 @@
         <div class="rating hotel-info__rating">
           <span class="rating__text">User Rattings</span>  
           <span class="rating__counter">4.5/<small>5</small></span>
-        </div>
+        </div> 
       </div>
       <div class="hotel-grid">
-        <div class="slider">
-          <!-- Slider main container -->
-          <div class="swiper">
+          <div class="swiper hotel-slider hotel__slider">
             <!-- Additional required wrapper -->
-            <div class="swiper-wrapper">
+            <div class="swiper-wrapper hotel-slider__wrapper">
               <!-- Slides -->
-              <div class="swiper-slide"><img src="img/slide-1.jpg" alt="slide"></div>
-              <div class="swiper-slide"><img src="img/slide-2.jpg" alt="slide"></div>
-              <div class="swiper-slide"><img src="img/slide-3.jpg" alt="slide"></div>
-              <div class="swiper-slide"><img src="img/slide-4.jpg" alt="slide"></div>
-              <div class="swiper-slide"><img src="img/slide-5.jpg" alt="slide"></div>
+              <div class="swiper-slide hotel-slider__slide"><img class="hotel-slider__img" src="img/slide-1.jpg" alt="slide"></div>
+              <div class="swiper-slide hotel-slider__slide"><img class="hotel-slider__img" src="img/slide-2.jpg" alt="slide"></div>
+              <div class="swiper-slide hotel-slider__slide"><img class="hotel-slider__img" src="img/slide-3.jpg" alt="slide"></div>
+              <div class="swiper-slide hotel-slider__slide"><img class="hotel-slider__img" src="img/slide-4.jpg" alt="slide"></div>
+              <div class="swiper-slide hotel-slider__slide"><img class="hotel-slider__img" src="img/slide-5.jpg" alt="slide"></div>
             </div>
           
             <!-- If we need navigation buttons -->
-            <button class="slider-button slider-button--prev"></button>
-            <button class="slider-button slider-button--next"></button>
+            <button class="hotel-slider__button hotel-slider__button--prev"></button>
+            <button class="hotel-slider__button hotel-slider__button--next"></button>
           </div>
-        </div>
+          <div class="hotel-right">
+            <div class="booking">
+              <div class="booking__info">
+                <div class="booking__price">
+                  <span class="booking__start">price starts as</span>
+                  <strong class="booking__pricetag">$ 8,500</strong>
+                  <span class="booking__per-room">per room / night</span>
+                </div>
+                <div class="booking__room">
+                  <div class="booking__text">
+                    <img src="img/user.svg" alt="Icon: user" class="booking__icon">
+                    <span class="booking__description">2 x Guests</span>
+                  </div>
+                  <div class="booking__text">
+                    <img src="img/home.svg" alt="Icon: home" class="booking__icon">
+                    <span class="booking__description">1 x Room</span>
+                  </div>
+                </div>
+              </div>
+              <div class="booking__call-center">
+                <span class="booking__heading">Quick Booking</span>
+                <a class="booking__number" href="tel:12100">
+                  <img src="img/phone-call.svg" alt="Icon: Phone">
+                  <span class="booking__num">12100</span>
+                </a>
+              </div>
+              <button class="button booking__button">View Other Options</button>
+            </div>
+            <div class="map">
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3952.5414950814966!2d98.2970310142733!3d7.8382523943522155!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x305025650c33dbab%3A0xa67a542329d011e1!2z0J_RhdGD0LrQtdGCLCDQmtCw0YDQvtC9LCDQntGC0LXQu9GMINCl0LjQu9GC0L7QvQ!5e0!3m2!1sru!2sru!4v1632522233385!5m2!1sru!2sru"
+                width="100%" height="213" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+          </div>
+          
       </div>
     </div>
   </section>
