create: reviews and reviews media

--- a/index.html
+++ b/index.html
@@ -171,7 +171,72 @@
       </form>
     </div>
   </section>
-  
+  <section class="reviews">
+    <div class="container">
+      <h2 class="reviews__title">What people think about us</h2>
+      <!-- Slider main container -->
+      <div class="swiper reviews-slider">
+        <!-- Additional required wrapper -->
+        <div class="swiper-wrapper ">
+          <!-- Slides -->
+          <div class="swiper-slide">
+           <div class="reviews-slider__item">
+            <div class="reviews-slider__profile">
+              <img src="img/reviews-avatar.jpg" alt="Photo: Megan Fox" class="reviews-slider__avatar">
+              <h3 class="reviews-slider__username">Megan Fox</h3>
+              <span class="reviews-slider__date">Stayed 18 Nov, 2019</span>
+              <div class="reviews__rating">
+                <img src="img/star.svg" alt="stars">
+                <img src="img/star.svg" alt="stars">
+                <img src="img/star.svg" alt="stars">
+                <img src="img/star.svg" alt="stars">
+                <img src="img/star.svg" alt="stars">
+              </div>
+            </div>
+            <p class="reviews-slider__text">It was very nice hotel with cleanliness. Staff behavior was good and polite. They welcome us very well. Issue was only that Lift was not in working and we were allotted to 3rd floor and amenities articles were in corner of gallery which were giving bad feeling. Breakfast was good and support of the staff was also very nice. Location is not good as per atmosphere, it is very nearby most of the popular places but self location in a narrow street is not good. Overall it was a good experience and could recommend.</p>
+           </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="reviews-slider__item">
+              <div class="reviews-slider__profile">
+                <img src="img/reviews-avatar1.jpg" alt="Photo: Malic Bild" class="reviews-slider__avatar">
+                <h3 class="reviews-slider__username">Malic Bild</h3>
+                <span class="reviews-slider__date">Stayed 01 Jun, 2020</span>
+                <div class="reviews__rating">
+                  <img src="img/star.svg" alt="stars">
+                  <img src="img/star.svg" alt="stars">
+                  <img src="img/star.svg" alt="stars">
+                  <img src="img/star.svg" alt="stars">
+                  <img src="img/star.svg" alt="stars">
+                </div>
+              </div>
+              <p class="reviews-slider__text">I express my gratitude to the hotel staff. They are such hard workers - they clean and wash something all day long. It's so nice to come back to clean rooms. The hotel administrators are very polite - it's always nice to contact them for any request.</p>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="reviews-slider__item">
+              <div class="reviews-slider__profile">
+                <img src="img/reviews-avatar2.jpg" alt="Photo: Eva Fild" class="reviews-slider__avatar">
+                <h3 class="reviews-slider__username">Eva Fild</h3>
+                <span class="reviews-slider__date">Stayed 20 Aug, 2021</span>
+                <div class="reviews__rating">
+                  <img src="img/star.svg" alt="stars">
+                  <img src="img/star.svg" alt="stars">
+                  <img src="img/star.svg" alt="stars">
+                  <img src="img/star.svg" alt="stars">
+                  <img src="img/star.svg" alt="stars">
+                </div>
+              </div>
+              <p class="reviews-slider__text">I want to leave a review about the hotel. My husband, my little daughter and I celebrated the New Year 2016 in the "Crew". We are very happy! The suite is spacious, cozy, equipped with everything you need. We were kindly provided with a baby cot for the baby. And the most important and pleasant thing is that we were allowed to celebrate the New Year in the company of relatives - our guests and guests of the "Crew". Excellent hotel, excellent staff, impeccable service. Thanks! I'm sure we'll be back)</p>
+            </div>
+          </div>
+        </div>
+        <!-- If we need navigation buttons -->
+        <button class="reviews-slider__button reviews-slider__button--prev"></button>
+        <button class="reviews-slider__button reviews-slider__button--next"></button>
+      </div>
+    </div>
+  </section>
   <script src="js/swiper-bundle.min.js"></script>
   <script src="js/main.js"></script>
   
