--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <!-- Additional required wrapper -->
         <div class="swiper-wrapper ">
           <!-- Slides -->
-          <div class="swiper-slide">
+          <div class="swiper-slide reviews-slider__slider">
            <div class="reviews-slider__item">
             <div class="reviews-slider__profile">
               <img src="img/reviews-avatar.jpg" alt="Photo: Megan Fox" class="reviews-slider__avatar">
@@ -196,7 +196,7 @@
             <p class="reviews-slider__text">It was very nice hotel with cleanliness. Staff behavior was good and polite. They welcome us very well. Issue was only that Lift was not in working and we were allotted to 3rd floor and amenities articles were in corner of gallery which were giving bad feeling. Breakfast was good and support of the staff was also very nice. Location is not good as per atmosphere, it is very nearby most of the popular places but self location in a narrow street is not good. Overall it was a good experience and could recommend.</p>
            </div>
           </div>
-          <div class="swiper-slide">
+          <div class="swiper-slide reviews-slider__slider">
             <div class="reviews-slider__item">
               <div class="reviews-slider__profile">
                 <img src="img/reviews-avatar1.jpg" alt="Photo: Malic Bild" class="reviews-slider__avatar">
@@ -213,7 +213,7 @@
               <p class="reviews-slider__text">I express my gratitude to the hotel staff. They are such hard workers - they clean and wash something all day long. It's so nice to come back to clean rooms. The hotel administrators are very polite - it's always nice to contact them for any request.</p>
             </div>
           </div>
-          <div class="swiper-slide">
+          <div class="swiper-slide reviews-slider__slider">
             <div class="reviews-slider__item">
               <div class="reviews-slider__profile">
                 <img src="img/reviews-avatar2.jpg" alt="Photo: Eva Fild" class="reviews-slider__avatar">
