--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <div class="hotel-info">
         <div class="hotel-info__text">
           <div class="hotel-wrapper">
-            <div class="stars">
+            <div class="stars hotel-wrapper__stars">
               <img src="img/star.svg" alt="stars">
               <img src="img/star.svg" alt="stars">
               <img src="img/star.svg" alt="stars">
