--- a/thankyou.html
+++ b/thankyou.html
@@ -19,7 +19,7 @@
   <header class="navbar navbar--mobile_fixed">
     <div class="container">
       <div class="navbar-top">
-        <a href="#" class="logo">
+        <a href="index.html" class="logo">
           <img src="img/horizontal-logo.svg" alt="Logo: Best Tour Plan" class="logo__image">
         </a>
         <form action="#" class="search navbar__search navbar__search--mobile_hidden">
@@ -107,9 +107,13 @@
           <div class="hotel-wrapper">
             <h1 class="hotel-name hotel-info__name">Thank You!</h1>
           </div>
-            
+          <div class="homepage homepage__button">
+            <a href="index.html">
+            <button class="button footer__button">Home page</button>
+            </a>
+          </div>
         </div>
-
+        
       </div>
 
     </div>
@@ -118,7 +122,9 @@
   <footer class="footer">
     <div class="container">
       <div class="footer-wrapper">
-        <img src="img/vertical-logo.svg" alt="Logo: Best Tour Plan" class="logo footer__logo">
+        <a href="index.html" class="logo footer__logo">
+          <img src="img/vertical-logo.svg" alt="Logo: Best Tour Plan">
+        </a>
         <div class="footer__list footer__categories">
           <h3 class="footer__title">ALL CATEGORIES</h3>
           <ul class="footer__ul">
