--- a/index.html
+++ b/index.html
@@ -258,22 +258,22 @@
         <div class="card activities__card">
           <img src="img/activity-1.jpg" alt="The curious corner of chamarel" class="card__image">
           <h3 class="card__title">The curious corner of chamarel</h3>
-          <button class="card__button">Book Now</button>
+          <button data-togle="modal" class="card__button">Book Now</button>
         </div>
         <div class="card activities__card">
           <img src="img/activity-2.jpg" alt="Gymkhana club golf course" class="card__image">
           <h3 class="card__title">Gymkhana club golf course</h3>
-          <button class="card__button">Book Now</button>
+          <button data-togle="modal" class="card__button">Book Now</button>
         </div>
         <div class="card activities__card">
           <img src="img/activity-3.jpg" alt="Tamarind falls hiking trip - full day" class="card__image">
           <h3 class="card__title">Tamarind falls hiking trip - full day</h3>
-          <button class="card__button">Book Now</button>
+          <button data-togle="modal" class="card__button">Book Now</button>
         </div>
         <div class="card activities__card">
           <img src="img/activity-4.jpg" alt="The blue marine discovery quest" class="card__image">
           <h3 class="card__title">The blue marine discovery quest</h3>
-          <button class="card__button">Book Now</button>
+          <button data-togle="modal" class="card__button">Book Now</button>
         </div>
       </div>
     </div>
@@ -351,9 +351,9 @@
           </div>
           <div class="footer__contact-form">
             <h3 class="footer__title footer__title--mb-3">Send us a message</h3>
-            <form action="send.php" method="POST" class="footer__form">
-              <input type="text" class="input footer__input" placeholder="Your Full Name*" name="name">
-              <input type="text" class="input footer__input" placeholder="Phone Number*" name="phone">
+            <form action="send.php" method="POST" class="form footer__form">
+              <div class="footer__input-group"><input type="text" class="input footer__input" placeholder="Your Full Name*" name="name" required minlength="2"></div>
+              <div class="footer__input-group"><input type="text" class="input footer__input modal__input--phone" placeholder="Phone Number*" name="phone" required minlength="11"></div>
               <textarea class="message footer__message" placeholder="Message" name="message"></textarea>
               <button class="button footer__button">Send</button>
               <span class="footer__info">* Required Fields</span>
@@ -369,10 +369,10 @@
         <img src="img/close.svg" alt="icon: close">
       </a>
       <h3 class="modal__title modal__title--mb-3">Booking</h3>
-      <form action="send.php" method="POST" class="modal__form">
-        <input type="text" class="input modal__input" placeholder="Your Full Name*" name="name">
-        <input type="text" class="input modal__input" placeholder="Phone Number*" name="phone">
-        <input type="text" class="input modal__input" placeholder="Email*" name="email">
+      <form action="send.php" method="POST" class="form modal__form">
+        <input type="text" class="input modal__input" placeholder="Your Full Name*" name="name" required minlength="2"> 
+        <input type="text" class="input modal__input modal__input--phone" placeholder="Phone Number*" name="phone" required minlength="11">
+        <input type="text" class="input modal__input" placeholder="Email*" name="email" required>
         <textarea class="message modal__message" placeholder="Message" name="message"></textarea>
         <button class="button modal__button">Send</button>
         <span class="modal__info">* Required Fields</span>
@@ -381,6 +381,8 @@
   </div>
   <script src="js/jquery-3.6.0.min.js"></script>
   <script src="js/swiper-bundle.min.js"></script>
+  <script src="js/jquery.validate.min.js"></script>
+  <script src="js/jquery.mask.min.js"></script>
   <script src="js/main.js"></script>
   
 </body>
