--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Nunito:wght@400;600;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/swiper-bundle.min.css">
-  <link rel="stylesheet" href="css/aos.css">
+ <!--  <link rel="stylesheet" href="css/aos.css">-->
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -256,24 +256,24 @@
     <div class="container">
       <h2 class="activities__title">Other Activities</h2>
       <div class="activities-wrapper">
-        <div class="card activities__card" data-aos="flip-up" data-aos-delay="100">
+        <div class="card activities__card activities__card--order" data-aos="flip-up" data-aos-delay="100">
           <img src="img/activity-1.jpg" alt="The curious corner of chamarel" class="card__image">
-          <h3 class="card__title">The curious corner of chamarel</h3>
+          <h3 class="card__title">The curious corner of&nbsp;chamarel</h3>
           <button data-togle="modal" class="card__button">Book Now</button>
         </div>
-        <div class="card activities__card" data-aos="flip-up" data-aos-delay="300">
+        <div class="card activities__card " data-aos="flip-up" data-aos-delay="300">
           <img src="img/activity-2.jpg" alt="Gymkhana club golf course" class="card__image">
-          <h3 class="card__title">Gymkhana club golf course</h3>
+          <h3 class="card__title card__title--mb10">Gymkhana club golf course</h3>
           <button data-togle="modal" class="card__button">Book Now</button>
         </div>
-        <div class="card activities__card" data-aos="flip-up" data-aos-delay="500">
+        <div class="card activities__card activities__card--order1" data-aos="flip-up" data-aos-delay="500">
           <img src="img/activity-3.jpg" alt="Tamarind falls hiking trip - full day" class="card__image">
-          <h3 class="card__title">Tamarind falls hiking trip - full day</h3>
+          <h3 class="card__title">Tamarind falls hiking trip&nbsp;-&nbsp;full day</h3>
           <button data-togle="modal" class="card__button">Book Now</button>
         </div>
         <div class="card activities__card" data-aos="flip-up" data-aos-delay="700">
           <img src="img/activity-4.jpg" alt="The blue marine discovery quest" class="card__image">
-          <h3 class="card__title">The blue marine discovery quest</h3>
+          <h3 class="card__title card__title--mb10">The blue marine discovery quest</h3>
           <button data-togle="modal" class="card__button">Book Now</button>
         </div>
       </div>
@@ -327,9 +327,9 @@
             </ul>
           </div>
           <div class="footer__contact-details">
-            <h3 class="footer__title footer__title--mb-3">Contact Details</h3>
+            <h3 class="footer__title footer__title--mb-4">Contact Details</h3>
             <p class="footer__text">Feel free to contact us by phone, email or by our contact form</p>
-            <ul class="footer__ul">
+            <ul class="footer__ul footer__ul--list">
               <li class="footer__item footer__item--mb-2">
                 <div class="footer__icon-wrapper"><img class="footer__icon" src="img/map-marker.svg" alt=""></div>
                 
