--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
         <span class="newsletter-title__strong">Newsletter</span>
       </h2>
       <form action="send.php" method="POST" class="form subscribe newsletter__subscribe">
-        <div class="subscribe__input modal__input-group">
-        <input type="email" class="input modal__input modal__input--subscribe" placeholder="Your email address" name="email" required>
+        <div class="subscribe__input subscribe__input-group">
+        <input type="email" class="input input-subscribe" placeholder="Your email address" name="email" required>
         </div>
         
         <button class="subscribe__button">Send</button>
