--- a/thankyou.html
+++ b/thankyou.html
@@ -24,7 +24,7 @@
         </a>
         <form action="#" class="search navbar__search navbar__search--mobile_hidden">
           <input type="text" class="search__input" placeholder="Search Location">
-          <button class="search__button">
+          <button class="buttonh search__button">
             <img src="img/search.svg" alt="Icon: search">
           </button>
         </form>
@@ -54,31 +54,31 @@
           <li class="navbar-menu__item navbar-menu__item--mobile_visible">
             <form action="#" class="search navbar__search navbar__search--mobile_visible">
               <input type="text" class="search__input" placeholder="Search Location">
-              <button class="search__button">
+              <button class="buttonh search__button">
                 <img src="img/search.svg" alt="Icon: search">
               </button>
             </form>
           </li>
           <li class="navbar-menu__item navbar-menu__item--mt12">
-            <a href="#" class="navbar-menu__link">All Deals</a>
+            <a href="#" class="link navbar-menu__link">All Deals</a>
           </li>
           <li class="navbar-menu__item">
-            <a href="#" class="navbar-menu__link">Hotels</a>
+            <a href="#" class="link navbar-menu__link">Hotels</a>
           </li>
           <li class="navbar-menu__item">
-            <a href="#" class="navbar-menu__link">Activities</a>
+            <a href="#" class="link navbar-menu__link">Activities</a>
           </li>
           <li class="navbar-menu__item">
-            <a href="#" class="navbar-menu__link">Hotel Day Packages</a>
+            <a href="#" class="link navbar-menu__link">Hotel Day Packages</a>
           </li>
           <li class="navbar-menu__item">
-            <a href="#" class="navbar-menu__link">Restaurants</a>
+            <a href="#" class="link navbar-menu__link">Restaurants</a>
           </li>
           <li class="navbar-menu__item">
-            <a href="#" class="navbar-menu__link">Events</a>
+            <a href="#" class="link navbar-menu__link">Events</a>
           </li>
           <li class="navbar-menu__item">
-            <a href="#" class="navbar-menu__link">Rodrigues</a>
+            <a href="#" class="link navbar-menu__link">Rodrigues</a>
           </li>
         </ul>
       </div>
@@ -89,10 +89,10 @@
     <div class="container">
       <ul class="breadcrumb-list">
         <li class="breadcrumb-list__item">
-          <a href="#" class="breadcrumb-list__link">Home</a>
+          <a href="#" class="link breadcrumb-list__link">Home</a>
         </li>
         <li class="breadcrumb-list__item">
-          <a href="#" class="breadcrumb-list__link">Flash Offers</a>
+          <a href="#" class="link breadcrumb-list__link">Flash Offers</a>
         </li>
         <li class="breadcrumb-list__item">
           <span class="breadcrumb-list__link">Grand Hilton Hotel</span>
@@ -107,9 +107,9 @@
           <div class="hotel-wrapper">
             <h1 class="hotel-name hotel-info__name">Thank You!</h1>
           </div>
-          <div class="homepage homepage__button">
+          <div class="homepage  homepage__button">
             <a href="index.html">
-            <button class="button footer__button">Home page</button>
+            <button class="button buttonh footer__button">Home page</button>
             </a>
           </div>
         </div>
@@ -128,45 +128,45 @@
         <div class="footer__list footer__categories">
           <h3 class="footer__title">ALL CATEGORIES</h3>
           <ul class="footer__ul">
-            <li class="footer__item"><a href="#" class="footer__link">All Deals</a></li>
-            <li class="footer__item"><a href="#" class="footer__link">Hotels</a></li>
-            <li class="footer__item"><a href="#" class="footer__link">Activities</a></li>
-            <li class="footer__item"><a href="#" class="footer__link">Spa Packages</a></li>
-            <li class="footer__item"><a href="#" class="footer__link">Hotel Day Packages</a></li>
-            <li class="footer__item"><a href="#" class="footer__link">Restaurants</a></li>
-            <li class="footer__item"><a href="#" class="footer__link">Fitness</a></li>
-            <li class="footer__item"><a href="#" class="footer__link">Rodrigues</a></li>
+            <li class="footer__item"><a href="#" class="link footer__link">All Deals</a></li>
+            <li class="footer__item"><a href="#" class="link footer__link">Hotels</a></li>
+            <li class="footer__item"><a href="#" class="link footer__link">Activities</a></li>
+            <li class="footer__item"><a href="#" class="link footer__link">Spa Packages</a></li>
+            <li class="footer__item"><a href="#" class="link footer__link">Hotel Day Packages</a></li>
+            <li class="footer__item"><a href="#" class="link footer__link">Restaurants</a></li>
+            <li class="footer__item"><a href="#" class="link footer__link">Fitness</a></li>
+            <li class="footer__item"><a href="#" class="link footer__link">Rodrigues</a></li>
           </ul>
         </div>
         <div class="footer__list footer__additional">
           <h3 class="footer__title">ADDITIONAL INFORMATION</h3>
           <ul class="footer__ul">
-            <li class="footer__item"><a href="#" class="footer__link">About Us</a></li>
-            <li class="footer__item"><a href="#" class="footer__link">Contact Us</a></li>
-            <li class="footer__item"><a href="#" class="footer__link">How does it work?</a></li>
-            <li class="footer__item"><a href="#" class="footer__link">Frequently Asked Questions</a></li>
-            <li class="footer__item"><a href="#" class="footer__link">Deals.mu loyalty program</a></li>
-            <li class="footer__item"><a href="#" class="footer__link">Promote your Business on BTP</a></li>
+            <li class="footer__item"><a href="#" class="link footer__link">About Us</a></li>
+            <li class="footer__item"><a href="#" class="link footer__link">Contact Us</a></li>
+            <li class="footer__item"><a href="#" class="link footer__link">How does it work?</a></li>
+            <li class="footer__item"><a href="#" class="link footer__link">Frequently Asked Questions</a></li>
+            <li class="footer__item"><a href="#" class="link footer__link">Deals.mu loyalty program</a></li>
+            <li class="footer__item"><a href="#" class="link footer__link">Promote your Business on BTP</a></li>
           </ul>
         </div>
         <div class="footer__social-network">
           <h3 class="footer__title footer__title--inline">Social Network</h3>
           <div class="footer__social-links">
-            <a href="https://ru-ru.facebook.com/" class="footer__links" target="_blank"><img src="img/facebok.svg"
+            <a href="https://ru-ru.facebook.com/" class="links footer__links" target="_blank"><img src="img/facebok.svg"
                 alt=""></a>
-            <a href="https://www.youtube.com/" class="footer__links" target="_blank"><img src="img/youtube.svg"
+            <a href="https://www.youtube.com/" class="links footer__links" target="_blank"><img src="img/youtube.svg"
                 alt=""></a>
-            <a href="https://www.instagram.com/" class="footer__links" target="_blank"><img src="img/instagram.svg"
+            <a href="https://www.instagram.com/" class="links footer__links" target="_blank"><img src="img/instagram.svg"
                 alt=""></a>
           </div>
         </div>
         <div class="footer__list footer__legal">
           <h3 class="footer__title">LEGAL INFORMATION</h3>
           <ul class="footer__ul">
-            <li class="footer__item"><a href="#" class="footer__link">Terms & Conditions</a></li>
-            <li class="footer__item"><a href="#" class="footer__link">Disclaimer</a></li>
-            <li class="footer__item"><a href="#" class="footer__link">Cancellation policy</a></li>
-            <li class="footer__item"><a href="#" class="footer__link">Privacy</a></li>
+            <li class="footer__item"><a href="#" class="link footer__link">Terms & Conditions</a></li>
+            <li class="footer__item"><a href="#" class="link footer__link">Disclaimer</a></li>
+            <li class="footer__item"><a href="#" class="link footer__link">Cancellation policy</a></li>
+            <li class="footer__item"><a href="#" class="link footer__link">Privacy</a></li>
           </ul>
         </div>
         <div class="footer__contact-details">
@@ -181,34 +181,40 @@
             <li class="footer__item footer__item--mb-2 footer__item--wid">
               <div class="footer__icon-wrapper"><img class="footer__icon" src="img/contact-phone-call.svg" alt=""></div>
               <div>
-                Tel (business hours) : <a href="tel:2691500" class="footer__tel">269 1500</a><br>
-                Tel (hotline) Monday - Saturday:<a href="tel:52566138" class="footer__tel">52-56-61-38</a>(08:00 am –
+                Tel (business hours) : <a href="tel:2691500" class="link footer__tel">269 1500</a><br>
+                Tel (hotline) Monday - Saturday: <a href="tel:52566138" class="link footer__tel">52-56-61-38</a>(08:00 am –
                 20:00 pm)<br>
-                Tel (hotline) Sunday: <a href="tel:52566138" class="footer__tel">52-56-61-38</a> (08:00 am – 14:00
+                Tel (hotline) Sunday: <a href="tel:52566138" class="link footer__tel">52-56-61-38</a> (08:00 am – 14:00
                 pm)<br>
               </div>
             </li>
             <li class="footer__item footer__item--mb-2">
               <div class="footer__icon-wrapper"><img class="footer__icon" src="img/email.svg" alt=""></div>
 
-              <a href="#" class="footer__link">cherly.lawson@example.com</a>
+              <a href="#" class="link footer__link">cherly.lawson@example.com</a>
             </li>
           </ul>
         </div>
         <div class="footer__contact-form">
           <h3 class="footer__title footer__title--mb-3">Send us a message</h3>
-          <form action="send.php" method="POST" class="footer__form">
-            <input type="text" class="input footer__input" placeholder="Your Full Name*" name="name">
-            <input type="text" class="input footer__input" placeholder="Phone Number*" name="phone">
-            <textarea class="footer__message" placeholder="Message" name="message"></textarea>
-            <button class="button footer__button">Send</button>
+          <form action="send.php" method="POST" class="form footer__form">
+            <div class="footer__input-group"><input type="text" class="input footer__input" placeholder="Your Full Name*"
+                name="name" required minlength="2"></div>
+            <div class="footer__input-group"><input type="tel" class="input footer__input footer__input--phone"
+                placeholder="Phone Number*" name="phone" required minlength="16"></div>
+            <textarea class="message footer__message" placeholder="Message" name="message"></textarea>
+            <button class="button buttonh footer__button">Send</button>
             <span class="footer__info">* Required Fields</span>
           </form>
         </div>
       </div>
     </div>
   </footer>
+  <script src="js/jquery-3.6.0.min.js"></script>
   <script src="js/swiper-bundle.min.js"></script>
+  <script src="js/jquery.validate.min.js"></script>
+  <script src="js/jquery.mask.min.js"></script>
+  <script src="js/aos.js"></script>
   <script src="js/main.js"></script>
 
 </body>
